--- a/.github/workflows/build-only-dev.yml
+++ b/.github/workflows/build-only-dev.yml
@@ -1,9 +1,9 @@
-name: Build Only (dev)
+name: Build Images Only (dev) - Smart
 
 on:
   workflow_dispatch: {}
   push:
-    branches: [ main ]
+    branches: [ "main" ]
     paths:
       - "src/**"
       - ".github/workflows/build-only-dev.yml"
@@ -13,12 +13,47 @@ permissions:
   contents: read
 
 env:
+  ENV_NAME: dev
+  LOCATION: westeurope
   RG_NAME: opal-dev-rg
   IMAGE_TAG: ${{ github.sha }}
 
 jobs:
-  build_only:
+  changes:
+    name: Detect changes
     runs-on: ubuntu-latest
+    outputs:
+      shared: ${{ steps.filter.outputs.shared }}
+      web_api: ${{ steps.filter.outputs.web_api }}
+      export_worker: ${{ steps.filter.outputs.export_worker }}
+      orchestrator: ${{ steps.filter.outputs.orchestrator }}
+      billing_service: ${{ steps.filter.outputs.billing_service }}
+      aml_sd_stub: ${{ steps.filter.outputs.aml_sd_stub }}
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Paths filter
+        id: filter
+        uses: dorny/paths-filter@v3
+        with:
+          filters: |
+            shared:
+              - 'src/shared/**'
+            web_api:
+              - 'src/web_api/**'
+            export_worker:
+              - 'src/export_worker/**'
+            orchestrator:
+              - 'src/orchestrator/**'
+            billing_service:
+              - 'src/billing_service/**'
+            aml_sd_stub:
+              - 'src/aml_sd_stub/**'
+
+  build_only:
+    name: Build & Push (dev)
+    runs-on: ubuntu-latest
+    needs: [changes]
 
     steps:
       - name: Checkout
@@ -37,46 +72,39 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y jq
 
-      - name: Detect changed paths
-        id: changes
-        uses: dorny/paths-filter@v3
-        with:
-          filters: |
-            shared:
-              - "src/shared/**"
-            web_api:
-              - "src/web_api/**"
-            export_worker:
-              - "src/export_worker/**"
-            orchestrator:
-              - "src/orchestrator/**"
-            billing_service:
-              - "src/billing_service/**"
-            aml_sd_stub:
-              - "src/aml_sd_stub/**"
-
-      - name: Compute build targets
-        id: targets
+      - name: Decide what to build
+        id: decide
         run: |
           set -euo pipefail
 
-          # If shared changes, rebuild everything that depends on it
-          if [ "${{ steps.changes.outputs.shared }}" = "true" ]; then
-            echo "web_api=true" >> $GITHUB_OUTPUT
-            echo "export_worker=true" >> $GITHUB_OUTPUT
-            echo "orchestrator=true" >> $GITHUB_OUTPUT
-            echo "billing_service=true" >> $GITHUB_OUTPUT
-            echo "aml_sd_stub=true" >> $GITHUB_OUTPUT
-          else
-            echo "web_api=${{ steps.changes.outputs.web_api }}" >> $GITHUB_OUTPUT
-            echo "export_worker=${{ steps.changes.outputs.export_worker }}" >> $GITHUB_OUTPUT
-            echo "orchestrator=${{ steps.changes.outputs.orchestrator }}" >> $GITHUB_OUTPUT
-            echo "billing_service=${{ steps.changes.outputs.billing_service }}" >> $GITHUB_OUTPUT
-            echo "aml_sd_stub=${{ steps.changes.outputs.aml_sd_stub }}" >> $GITHUB_OUTPUT
+          SHARED="${{ needs.changes.outputs.shared }}"
+          WEB_API="${{ needs.changes.outputs.web_api }}"
+          EXPORT_WORKER="${{ needs.changes.outputs.export_worker }}"
+          ORCH="${{ needs.changes.outputs.orchestrator }}"
+          BILLING="${{ needs.changes.outputs.billing_service }}"
+          AML="${{ needs.changes.outputs.aml_sd_stub }}"
+
+          # If shared changed, everything that imports shared must rebuild
+          if [ "${SHARED}" = "true" ]; then
+            WEB_API=true
+            EXPORT_WORKER=true
+            ORCH=true
+            BILLING=true
+            AML=true
           fi
 
-          echo "Targets:"
-          cat $GITHUB_OUTPUT
+          echo "build_web_api=${WEB_API}" >> "$GITHUB_OUTPUT"
+          echo "build_export_worker=${EXPORT_WORKER}" >> "$GITHUB_OUTPUT"
+          echo "build_orchestrator=${ORCH}" >> "$GITHUB_OUTPUT"
+          echo "build_billing_service=${BILLING}" >> "$GITHUB_OUTPUT"
+          echo "build_aml_sd_stub=${AML}" >> "$GITHUB_OUTPUT"
+
+          echo "Will build:"
+          echo "  web_api=${WEB_API}"
+          echo "  export_worker=${EXPORT_WORKER}"
+          echo "  orchestrator=${ORCH}"
+          echo "  billing_service=${BILLING}"
+          echo "  aml_sd_stub=${AML}"
 
       - name: Discover ACR in Azure
         run: |
@@ -94,45 +122,46 @@ jobs:
           az acr login --name "${ACR_NAME}"
 
       - name: Set up Docker Buildx
-        run: |
-          set -euo pipefail
-          docker buildx create --use
+        uses: docker/setup-buildx-action@v3
 
       - name: Build & push images (only what changed)
         run: |
           set -euo pipefail
 
-          if [ "${{ steps.targets.outputs.web_api }}" = "true" ]; then
+          build_push () {
+            local IMAGE="$1"
+            local DOCKERFILE="$2"
+            echo "Building ${IMAGE} using ${DOCKERFILE}"
             docker buildx build --platform linux/amd64 \
-              -t "${ACR_LOGIN}/opal/web-api:${IMAGE_TAG}" \
-              -f src/web_api/Dockerfile . --push
+              -t "${IMAGE}" \
+              -f "${DOCKERFILE}" . --push
+          }
+
+          if [ "${{ steps.decide.outputs.build_web_api }}" = "true" ]; then
+            build_push "${ACR_LOGIN}/opal/web-api:${IMAGE_TAG}" "src/web_api/Dockerfile"
           fi
 
-          if [ "${{ steps.targets.outputs.orchestrator }}" = "true" ]; then
-            docker buildx build --platform linux/amd64 \
-              -t "${ACR_LOGIN}/opal/orchestrator:${IMAGE_TAG}" \
-              -f src/orchestrator/Dockerfile . --push
+          if [ "${{ steps.decide.outputs.build_orchestrator }}" = "true" ]; then
+            build_push "${ACR_LOGIN}/opal/orchestrator:${IMAGE_TAG}" "src/orchestrator/Dockerfile"
           fi
 
-          if [ "${{ steps.targets.outputs.export_worker }}" = "true" ]; then
-            docker buildx build --platform linux/amd64 \
-              -t "${ACR_LOGIN}/opal/export-worker:${IMAGE_TAG}" \
-              -f src/export_worker/Dockerfile . --push
+          if [ "${{ steps.decide.outputs.build_export_worker }}" = "true" ]; then
+            build_push "${ACR_LOGIN}/opal/export-worker:${IMAGE_TAG}" "src/export_worker/Dockerfile"
           fi
 
-          if [ "${{ steps.targets.outputs.billing_service }}" = "true" ]; then
-            docker buildx build --platform linux/amd64 \
-              -t "${ACR_LOGIN}/opal/billing-service:${IMAGE_TAG}" \
-              -f src/billing_service/Dockerfile . --push
+          if [ "${{ steps.decide.outputs.build_billing_service }}" = "true" ]; then
+            build_push "${ACR_LOGIN}/opal/billing-service:${IMAGE_TAG}" "src/billing_service/Dockerfile"
           fi
 
-          if [ "${{ steps.targets.outputs.aml_sd_stub }}" = "true" ]; then
-            docker buildx build --platform linux/amd64 \
-              -t "${ACR_LOGIN}/opal/aml-sd-stub:${IMAGE_TAG}" \
-              -f src/aml_sd_stub/Dockerfile . --push
+          if [ "${{ steps.decide.outputs.build_aml_sd_stub }}" = "true" ]; then
+            build_push "${ACR_LOGIN}/opal/aml-sd-stub:${IMAGE_TAG}" "src/aml_sd_stub/Dockerfile"
           fi
 
       - name: Summary
         run: |
-          echo "Pushed tag: ${IMAGE_TAG}"
-          echo "ACR: ${ACR_LOGIN}"
+          echo "Pushed tags:"
+          echo "  ${ACR_LOGIN}/opal/web-api:${IMAGE_TAG}"
+          echo "  ${ACR_LOGIN}/opal/orchestrator:${IMAGE_TAG}"
+          echo "  ${ACR_LOGIN}/opal/export-worker:${IMAGE_TAG}"
+          echo "  ${ACR_LOGIN}/opal/billing-service:${IMAGE_TAG}"
+          echo "  ${ACR_LOGIN}/opal/aml-sd-stub:${IMAGE_TAG}"
