--- a/src/export_worker/requirements.txt
+++ b/src/export_worker/requirements.txt
@@ -4,6 +4,7 @@ pydantic-settings==2.5.2
 SQLAlchemy==2.0.36
 psycopg[binary]==3.2.2
 
+azure-core==1.32.0
 azure-identity==1.16.1
 azure-storage-blob==12.22.0
 azure-servicebus==7.12.2
